@@ -3,10 +3,16 @@ package ar.edu.unq.grupoh.criptop2p.service;
 import ar.edu.unq.grupoh.criptop2p.exceptions.CryptoException;
 import ar.edu.unq.grupoh.criptop2p.model.Cryptocurrency;
 import ar.edu.unq.grupoh.criptop2p.model.enums.CriptosNames;
+import ar.edu.unq.grupoh.criptop2p.model.ApiBinance;
+import ar.edu.unq.grupoh.criptop2p.model.ApiDolar;
 import ar.edu.unq.grupoh.criptop2p.repositories.CryptoRepository;
 import ar.edu.unq.grupoh.criptop2p.service.response.BinanceResponse;
-import ar.edu.unq.grupoh.criptop2p.service.response.USDResponse;
+import ar.edu.unq.grupoh.criptop2p.service.response.CotizationUSDToARS;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
@@ -19,21 +25,25 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 @EnableScheduling
 public class CryptosService {
 
     @Autowired
     private CryptoRepository cryptoCurrencyRepository;
-    private final RestTemplate restTemplate = new RestTemplate();
+    private final ApiBinance apiBinance = new ApiBinance();
 
     @Transactional
+    //@Cacheable(value = "cryptos" , key = "'All'")
     public List<Cryptocurrency> findAll() {
+        log.info("Dentro del metodo del service findAll");
         return cryptoCurrencyRepository.findAll();
     }
 
     @Transactional(readOnly = true)
     public Cryptocurrency findCryptoValueByName(CriptosNames cryptoName) {
-        return cryptoCurrencyRepository.findAll()
+        List<Cryptocurrency> cryptos = cryptoCurrencyRepository.findAll();
+        return cryptos
                 .stream()
                 .filter(crypto -> crypto.getCrypto() == cryptoName)
                 .collect(Collectors.collectingAndThen(Collectors.maxBy(Comparator.comparing(Cryptocurrency::getDate)), Optional::get));
@@ -42,11 +52,11 @@ public class CryptosService {
     @Transactional
     public List<Cryptocurrency> cryptoLast24hours(CriptosNames cryptoName) {
         LocalDateTime end = LocalDateTime.now();
-        LocalDateTime start2 = end.minusHours(24) ;//Para que sea cada 24hr //end.minusMinutes(4);
+        LocalDateTime start2 = end.minusHours(24) ;//Para que sea cada 24hr
         List<Cryptocurrency> cryptos = findByCrypto(cryptoName)
                 .stream()
                 .filter(cryptoCurrency -> cryptoCurrency.getDate().isBefore(ChronoLocalDateTime.from(end)) && cryptoCurrency.getDate().isAfter(ChronoLocalDateTime.from(start2)))
-                .collect(Collectors.toList());
+                .toList();
         return cryptos;
     }
 
@@ -56,30 +66,30 @@ public class CryptosService {
         List<Cryptocurrency> cryptos = findByCrypto(crypto)
                 .stream()
                 .filter(cryptoCurrency -> cryptoCurrency.getDate().isBefore(ChronoLocalDateTime.from(end)) && cryptoCurrency.getDate().isAfter(ChronoLocalDateTime.from(start)))
-                .collect(Collectors.toList());
+                .toList();
         return cryptos;
     }
 
     @Transactional
     public Cryptocurrency getCryptoCurrency(CriptosNames cryptoName) {
         Float binancePrice = this.getBinanceResponse(cryptoName).getPrice();
-        Float usdPrice = this.getUSDResponse().getVenta();
-        Float price = binancePrice * usdPrice;
-        return new Cryptocurrency(cryptoName, price);
+        return new Cryptocurrency(cryptoName, binancePrice);
     }
 
     @Transactional
+    @Cacheable(value = "cryptos" , key = "'All'")
     public List<Cryptocurrency> getLastCryptoCurrency() {
+        log.info("Dentro del metodo del service");
         List<CriptosNames> cryptoNames = Arrays.asList(CriptosNames.values());
         return cryptoNames
                 .stream()
                 .map (crypto -> Collections.max(findByCrypto(crypto), Comparator.comparing(Cryptocurrency::getDate)))
-                .collect(Collectors.toList()) ;
+                .toList() ;
     }
 
 
     @Transactional
-    //@Scheduled(cron = "0 0/10 * * * *") // cron = "0 0/10 * * * *" para que sea cada 10m
+    @Scheduled(cron = "0 0/10 * * * *") // cron = "0 0/10 * * * *" para que sea cada 10m
     public List<Cryptocurrency> updateAllCryptos() {
         List<Cryptocurrency> cryptoCurrencyList = new ArrayList<>();
         BinanceResponse[] binanceCryptoDTOS = getAllCryptoPrice(List.of(CriptosNames.values()));
@@ -96,19 +106,12 @@ public class CryptosService {
     }
 
     private BinanceResponse getBinanceResponse(CriptosNames cryptoName) {
-            String url = "https://api1.binance.com/api/v3/ticker/price?symbol=" + cryptoName.name();
-            BinanceResponse br = restTemplate.getForObject(url, BinanceResponse.class);
-            return br != null ? br : new BinanceResponse();
-    }
-
-    private USDResponse getUSDResponse() {
-            String url = "https://api-dolar-argentina.herokuapp.com/api/dolaroficial";
-            USDResponse br = restTemplate.getForObject(url, USDResponse.class);
-            return br != null ? br : new USDResponse();
+            return this.apiBinance.getBinanceResponse(cryptoName);
     }
 
     private List<Cryptocurrency> findByCrypto(CriptosNames cryptoName){
-        return cryptoCurrencyRepository.findAll().stream().filter(cryptoCurrency -> cryptoCurrency.getCrypto() == cryptoName).collect(Collectors.toList());
+        List<Cryptocurrency> cryptos = cryptoCurrencyRepository.findAll();
+        return cryptos.stream().filter(cryptoCurrency -> cryptoCurrency.getCrypto() == cryptoName).toList();
     }
 
     private Cryptocurrency binanceToModel(BinanceResponse binanceCryptoDTO) throws CryptoException {
